WFLY-20567 MicroProfile OpenAPI subsystem does not allow multiple deployments to use the same endpoint